[package]
name = "advent_2018"
version = "0.1.0"
authors = ["Andres <andresnrx@gmail.com>"]
edition = "2018"

[[bin]]
name = "one_a"
path = "src/one_a.rs"

[[bin]]
name = "one_b"
path = "src/one_b.rs"

[lib]
name = "common"
path = "src/common/lib.rs"

[dependencies]
reqwest = "0.9.5"
cookie = "0.11.0"
