[package]
name = "advent_2018"
version = "0.1.0"
authors = ["Andres <andresnrx@gmail.com>"]
edition = "2018"

[[bin]]
name = "one_a"
path = "src/one_a.rs"

[[bin]]
name = "one_b"
path = "src/one_b.rs"

[[bin]]
name = "two_a"
path = "src/two_a.rs"

[[bin]]
name = "two_b"
path = "src/two_b.rs"

[[bin]]
name = "three_a"
path = "src/three_a.rs"

[[bin]]
name = "three_b"
path = "src/three_b.rs"

[[bin]]
name = "four_a"
path = "src/four_a.rs"

[[bin]]
name = "four_b"
path = "src/four_b.rs"

[[bin]]
name = "five_a"
path = "src/five_a.rs"

[[bin]]
name = "five_b"
path = "src/five_b.rs"

[[bin]]
name = "six_a"
path = "src/six_a.rs"

[[bin]]
name = "six_b"
path = "src/six_b.rs"

[[bin]]
name = "seven_a"
path = "src/seven_a.rs"

[[bin]]
name = "seven_b"
path = "src/seven_b.rs"

[[bin]]
name = "eight_a"
path = "src/eight_a.rs"

[[bin]]
name = "eight_b"
path = "src/eight_b.rs"

[[bin]]
name = "nine_a"
path = "src/nine_a.rs"

[[bin]]
name = "nine_b"
path = "src/nine_b.rs"

[[bin]]
name = "ten_a"
path = "src/ten_a.rs"

[lib]
name = "common"
path = "src/common/lib.rs"

[dependencies]
reqwest = "0.9.5"
cookie = "0.11.0"
enum-map = "0.4.1"
lazy_static = "1.2.0"
regex = "1.1.0"
